2009-09-04  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-archive.rb: Use Thread.
	* lib/qwik/act-archive.rb: Delete flag related methods.

2009-09-03  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-metadata.rb: Cache feed file.

	* lib/qwik/action.rb: New method site_updated. This method is
	called when the site is updated.
	* lib/qwik/act-new.rb: Ditto.
	* lib/qwik/act-save.rb: Ditto.

	* lib/qwik/act-mdlb.rb: Delete unused function.

	* lib/qwik/response.rb: Fix ico mimetype.

	* lib/qwik/act-theme.rb: Add favicon.ico support.

	* lib/qwik/farm.rb: Do not use each method.
	* lib/qwik/site-report.rb: Ditto.

	* lib/qwik/db-filesystem.rb: Do not use Enumerable.
	* lib/qwik/pages.rb: New method list.

	* lib/qwik/pages.rb: New method title_list_keys and date_list_keys.

	* lib/qwik/pages.rb: Do not cache Page objects.
	* lib/qwik/pages.rb: Clear unused code.

	* lib/qwik/page-title.rb: Disable unused PageTitle function.
	* lib/qwik/page-title.rb: Delete the code.
	* lib/qwik/pages.rb: FIX: add page-wikidb again.
	* lib/qwik/page-wikidb.rb: Do not cache WikiDB object.

	* lib/qwik/act-status.rb: Add test cases.

	* lib/qwik/act-history.rb: TimeMachine function is disabled.

	* lib/qwik/act-comment.rb: Guests cannot post comments.

	* lib/qwik/db-filesystem.rb: New method size.
	* lib/qwik/page-get.rb: Ditto.

	* lib/qwik/act-html.rb: Prepare big page test case.

	* lib/qwik/act-html.rb: Add big page error.

	* lib/qwik/act-archive.rb: Cache archive.
	* lib/qwik/act-archive.rb: Do not start creating archive when the
	process is running.

2009-09-02  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-metadata.rb: Do not cache SiteMetadata object.
	* lib/qwik/act-metadata.rb: Do not show page title.

	* lib/qwik/act-metadata.rb: Limit only 10 items per feed.

	* lib/qwik/act-metadata.rb: Disable RSS 0.91 and RSS 1.0.
	* lib/qwik/act-metadata.rb: Delete comments.

	* lib/qwik/site-search.rb: Search function is disabled for now.